@@ -1,0 +1,10 @@
+package com.beust.jcommander.internal;
+
+public interface Console {
+
+  void print(String msg);
+
+  void println(String msg);
+
+  char[] readPassword();
+}
